tests/paczka1/fuzzy1/57699230.err
Error in line 3: lxLP8JfoSy A546 70,6
Error in line 39: lxLP8JfoSy A476 55,3
